Fix the scrollbar placement and overlap

--- a/src/styles/SideListStyles.css
+++ b/src/styles/SideListStyles.css
@@ -20,5 +20,5 @@
 
 .scrollbar::-webkit-scrollbar-thumb
 {
-    background-color: rgba(0, 0, 0, 0.3)
+    background-color: rgba(0, 0, 0, 0.2)
 }
